# magazzino-backend

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: auth.py  customers.py  deps.py  errors.py  health.py  products.py  schemas.py
app/core/: config.py  security.py
app/db/: base.py  seed.py  session.py
app/models/: __init__.py  customer.py  product.py  user.py
app/services/: __init__.py  auth.py  customer.py  products.py
migrations/: env.py
migrations/versions/: 20260723_0000_0001_baseline.py  20260723_0100_0002_users.py  20260723_0200_0003_customers.py  20260723_0200_0003_products.py
tests/: conftest.py  test_config.py  test_customer_schemas.py  test_errors.py  test_health.py  test_product_csv.py  test_product_schemas.py  test_schemas.py  test_security.py
tests/integration/: conftest.py  test_auth_api.py  test_customers_api.py  test_database.py  test_migration_customers.py  test_migration_products.py  test_migration_users.py  test_migrations.py  test_products_api.py  test_seed.py
